[gd_scene load_steps=9 format=3 uid="uid://d2yfi8rf2hqf7"]

[ext_resource type="Texture2D" uid="uid://bvt1cuarkum4c" path="res://Items/coin.png" id="1_13hjo"]
[ext_resource type="Script" path="res://Items/gravity_coin.gd" id="1_y1cmw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_375p0"]
atlas = ExtResource("1_13hjo")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_t164k"]
atlas = ExtResource("1_13hjo")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_gweuu"]
atlas = ExtResource("1_13hjo")
region = Rect2(16, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_sja6t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_375p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t164k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gweuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t164k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uvdhd"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ap6tq"]
radius = 3.0

[node name="GravityCoin" type="CharacterBody2D"]
collision_layer = 0
floor_stop_on_slope = false
floor_block_on_wall = false
script = ExtResource("1_y1cmw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sja6t")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uvdhd")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_ap6tq")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
